--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         }
       }(window.location))
     </script>
-    <title>Sea waste monitoring system</title>
+    <title>AQUAPYLL</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
